added two more html pages

--- a/about.html
+++ b/about.html
@@ -21,7 +21,8 @@
         <li>Malaysia</li>
         <li>America</li>
        </ul> 
-       </p>
+       </p><img src="src/images/Yosemite.jpg" alt="A pciture of me in the tunnel view point of Yosemite national park in California of America." width="600px"> <br>
+       <a href="./places.html"><h3>More Pictures<h3></a>
     
 </body>
 </html>
