--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <h1>Little Traveller: Kaiqi George</h1>
-    <a href="./about.html">About Me</a>
+    <a href="./about.html"><h2>About Me</h2></a>
+    <a href="./places.html"><h2>Places</h2></a>
     <br>
-    <a href="./places.html">Places</a>
+    <img src="src/images/Utah.JPG" alt="A picture of mine in the monument valley of America" width="600px">
 </body>
 </html>
