--- a/places.html
+++ b/places.html
@@ -57,5 +57,5 @@
     />
   </li>
   <br>
-  <a href="./index.html"><h3>Back to Homepage</h3></a>
+  <a href="./index.html" target="_blank"><h3>Back to Homepage</h3></a>
 </ur>
