--- a/places.html
+++ b/places.html
@@ -1,5 +1,14 @@
-<h1>Some of the pictures I took on the journey.</h1>
-<ur>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Places</title>
+</head>
+<body>
+  <h1>Some of the pictures I took on the journey.</h1>
+<ul>
   <li>
     Malaysia <br><br>
     <img
@@ -58,4 +67,8 @@
   </li>
   <br>
   <a href="./index.html" target="_blank"><h3>Back to Homepage</h3></a>
-</ur>
+</ul>
+  
+</body>
+</html>
+
