--- a/places.html
+++ b/places.html
@@ -29,11 +29,7 @@
   <br>
   <li>
     France <br><br>
-    <img
-      src="src/images/France.JPG"
-      alt="It is a picture of the city hall of Bordeux in France".
-      width="600px"
-    />
+    <img src="src/images/France.JPG" alt="It is a picture of the city hall of Bordeux in France". width="600px"/>
   </li>
   <br>
   
